src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Opportunity Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Educate</fullName>
        </values>
        <values>
            <fullName>Explore</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Position%2FPrepare</fullName>
        </values>
        <values>
            <fullName>Recommend</fullName>
        </values>
        <values>
            <fullName>Won%2FSatisfy</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Purchase_Amount__c</fullName>
        <label>Actual Purchase Amount</label>
        <summarizedField>Actual_Sales__c.Purchase_Amount__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Time_Direct_Sales__c</fullName>
        <description>Direct sales for all times</description>
        <label>All Time Direct Sales</label>
        <summarizedField>Actual_Sales__c.Purchase_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Actual_Sales__c.Sale_Type__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </summaryFilterItems>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval status for direct zone pricing on opportunity</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending RPSM Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending RVP Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending SVP Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avoid_Stage_Backtrack_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avoid Stage Backtrack 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behr_Closed_won_date_US__c</fullName>
        <label>Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Behr_Rep_Contact_Number__c</fullName>
        <inlineHelpText>Phone number customer can reach you</inlineHelpText>
        <label>Behr Rep Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Behr_Rep_Email__c</fullName>
        <label>Behr Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Behr_Rep_Name__c</fullName>
        <label>Behr Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_LYTD__c</fullName>
        <label>CC LYTD</label>
        <summarizedField>Actual_Sales__c.LYTD_Currency__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_LY__c</fullName>
        <label>CC LY</label>
        <summarizedField>Actual_Sales__c.LY_Currency__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_Rolling_Year__c</fullName>
        <label>CC Rolling Year</label>
        <summarizedField>Actual_Sales__c.Rolling_year_Currency__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_TYTD__c</fullName>
        <label>CC TYTD</label>
        <summarizedField>Actual_Sales__c.TYTD_Currency__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_TY__c</fullName>
        <label>CC TY</label>
        <summarizedField>Actual_Sales__c.TY_Currency__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>TEXT(Account.Tier_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Ship To City details.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn-Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden (PRO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden (THD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Count_Opportunity_Product__c</fullName>
        <label>Count Opportunity Product</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_Picklist__c</fullName>
        <description>This field used in order to make the country and state picklist values consistent between Opportunity and Quote.</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Ship To Country details.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DTP_LYTD__c</fullName>
        <label>DTP LYTD</label>
        <summarizedField>Actual_Sales__c.LYTD_Currency_DTP__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTP_LY__c</fullName>
        <label>DTP LY</label>
        <summarizedField>Actual_Sales__c.LY_Currency_DTP__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTP_Rolling_Year__c</fullName>
        <label>DTP Rolling Year</label>
        <summarizedField>Actual_Sales__c.Rolling_year_Currency_DTP__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTP_TYTD__c</fullName>
        <label>DTP TYTD</label>
        <summarizedField>Actual_Sales__c.TYTD_Currency_DTP__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTP_TY__c</fullName>
        <label>DTP TY</label>
        <summarizedField>Actual_Sales__c.TY_Currency_DTP__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_LYTD__c</fullName>
        <description>Last Year To Date direct sales</description>
        <label>Direct LYTD</label>
        <summarizedField>Actual_Sales__c.LYTD_Currency_DTP__c</summarizedField>
        <summaryFilterItems>
            <field>Actual_Sales__c.Sale_Type__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </summaryFilterItems>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Direct_TYTD__c</fullName>
        <description>TY to date direct sales rollup</description>
        <label>Direct TYTD</label>
        <summarizedField>Actual_Sales__c.TYTD_Currency_DTP__c</summarizedField>
        <summaryFilterItems>
            <field>Actual_Sales__c.Sale_Type__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </summaryFilterItems>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exterior_Paint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exterior Paint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Sale_Date__c</fullName>
        <description>Rollup from actual sales for first sale date</description>
        <label>First Sale Date</label>
        <summarizedField>Actual_Sales__c.Order_date__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Floor_Coatings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floor Coatings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interior_Paint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interior Paint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sale_Date__c</fullName>
        <description>Last sale date</description>
        <label>Last Sale Date</label>
        <summarizedField>Actual_Sales__c.Order_date__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Managed_Amount__c</fullName>
        <description>Managed amount rollup</description>
        <label>Managed Amount</label>
        <summarizedField>Actual_Sales__c.Managed_Amount__c</summarizedField>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Opportunity ID used to associate the quote in SAP</description>
        <displayFormat>O-{000000000}</displayFormat>
        <label>Opportunity Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lost_Reason__c</fullName>
        <label>Opportunity Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>THD Value Prop does not fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD does not carry right product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P2P_2015_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box for sales administration to identify the opportunity as qualified for the P2P incentive program.</description>
        <label>P2P 2015 Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PEN__PriceBook2Id__c</fullName>
        <formula>Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriceBook2Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>If(not(isblank( Account.Parent.Name)) , Account.Parent.Name, Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_per_Gallon__c</fullName>
        <label>Price Per Gallon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Account_Number__c</fullName>
        <formula>Account.Pro_Rewards_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Rewards Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Timeline__c</fullName>
        <label>Project Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <label>SAP Ship to Account #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Shop_Account__c</fullName>
        <formula>Account.SAP_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Shop Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stains__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Project__c</fullName>
        <label>Start Date of Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Picklist__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country_Picklist__c</controllingField>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campeche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiapas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chihuahua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coahuila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guanajuato</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Ship To State details</description>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Ship To State details</description>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <label>Sub-Lead Source</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Contractor Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD Pro Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rep Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTP Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Magazine Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web to Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPro Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Trade Association/Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Walk In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>THD_Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Home Depot Store involved in this opportunity</description>
        <label>THD Store</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Actuals_LYTD__c</fullName>
        <formula>CC_LYTD__c +  DTP_LYTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals LYTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actuals_LY__c</fullName>
        <formula>CC_LY__c +  DTP_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals LY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actuals_Rolling_Year__c</fullName>
        <formula>CC_Rolling_Year__c +  DTP_Rolling_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals Rolling Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actuals_TYTD__c</fullName>
        <formula>CC_TYTD__c +  DTP_TYTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals TYTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actuals_TY__c</fullName>
        <formula>CC_TY__c +  DTP_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals TY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DTP_Sales__c</fullName>
        <label>Total DTP Sales</label>
        <summarizedField>Actual_Sales__c.Purchase_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Actual_Sales__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>DTP Orders</value>
        </summaryFilterItems>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_POS_Sales__c</fullName>
        <label>Total POS Sales</label>
        <summarizedField>Actual_Sales__c.Purchase_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Actual_Sales__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>POS Sales, POS Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Actual_Sales__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>If (  ISNULL(Start_Date_of_Project__c), Year( CloseDate ), Year(Start_Date_of_Project__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <description>Ship To Zipcode details</description>
        <label>Zipcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_item_max__c</fullName>
        <description>Zone as a rollup from the item max</description>
        <label>Product Zone Max</label>
        <summarizedField>OpportunityLineItem.Zone__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>case_safe_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case safe id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_quotes__c</fullName>
        <description># of quotes</description>
        <label># of quotes</label>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zone_account__c</fullName>
        <formula>Account.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyMonthView</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Month View</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>OPPORTUNITY.FISCAL_YEAR</columns>
        <columns>Total_Actuals_TY__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunities10K</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>greaterThan</operation>
            <value>10000</value>
        </filters>
        <label>Opportunities &gt; $10K</label>
    </listViews>
    <listViews>
        <fullName>Opportunities50K</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>greaterThan</operation>
            <value>50000</value>
        </filters>
        <label>Opportunities &gt; $50K</label>
    </listViews>
    <listViews>
        <fullName>OpportunitiesLost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Opportunities Lost</label>
    </listViews>
    <listViews>
        <fullName>OpportunitiesWon</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>Opportunities Won</label>
    </listViews>
</CustomObject>